--- a/admin.html
+++ b/admin.html
@@ -392,7 +392,7 @@
                 let vid = '';
                 if(url.includes('watch?v=')) vid = url.split('v=')[1].split('&')[0];
                 else if(url.includes('youtu.be/')) vid = url.split('youtu.be/')[1].split('?')[0];
-                if (vid) return `https://www.youtube.com/embed/${vid}?autoplay=1&mute=1&controls=0&loop=1&playlist=${vid}`;
+                if (vid) return `https://www.youtube.com/embed/${vid}?autoplay=1&controls=0&loop=1&playlist=${vid}`;
             }
             return url;
         }
